add start script to package.json
this way we can start it with 'npm start'

--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "node-hello-world",
+  "name": "FJ test app",
   "private": true,
   "version": "0.0.1",
-  "description": "Node.js Hello world app on docker",
+  "description": "a simple node.js example app",
   "author": "hypriot.com",
+  "main": "index.js",
+  "script":{
+    "start": "http-server ./" 
+  }
   "dependencies": {
     "express": "4.12.0"
   }
