--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FJ test app",
+  "name": "fjtestapp",
   "private": true,
   "version": "0.0.1",
   "description": "a simple node.js example app",
